--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.272.0",
+    "@aws-sdk/lib-dynamodb": "^3.272.0",
     "@aws-sdk/util-dynamodb": "^3.272.0",
     "aws-lambda": "^1.0.7",
     "serverless": "^3.27.0"
